fix: safari text alignment of card items

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -28,6 +28,7 @@ $border-radius: 1em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: stretch;
     appearance: none;
 
     height: 12em;
